--- a/features/times/src/main/res/layout/calcmethod_dialog.xml
+++ b/features/times/src/main/res/layout/calcmethod_dialog.xml
@@ -95,7 +95,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:text="@string/fajr"
-            app:layout_constraintEnd_toStartOf="@+id/fajr"
+            app:layout_constraintEnd_toStartOf="@+id/leftBarrier"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/highLatsSpinner" />
@@ -110,7 +110,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:text="@string/sun"
-            app:layout_constraintEnd_toStartOf="@+id/sun"
+            app:layout_constraintEnd_toStartOf="@+id/leftBarrier"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/fajrText" />
@@ -125,7 +125,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:text="@string/zuhr"
-            app:layout_constraintEnd_toStartOf="@+id/dhuhr"
+            app:layout_constraintEnd_toStartOf="@+id/leftBarrier"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/sunText" />
@@ -140,7 +140,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:text="@string/asr"
-            app:layout_constraintEnd_toStartOf="@+id/asr"
+            app:layout_constraintEnd_toStartOf="@+id/leftBarrier"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/dhuhrText" />
@@ -155,7 +155,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:text="@string/maghrib"
-            app:layout_constraintEnd_toStartOf="@+id/maghrib"
+            app:layout_constraintEnd_toStartOf="@+id/leftBarrier"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/asrText" />
@@ -170,7 +170,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:text="@string/ishaa"
-            app:layout_constraintEnd_toStartOf="@+id/ishaa"
+            app:layout_constraintEnd_toStartOf="@+id/leftBarrier"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/maghribText" />
@@ -265,14 +265,12 @@
             android:id="@+id/fajrEdit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
+            android:padding="8dp"
             app:layout_constraintBottom_toBottomOf="@+id/fajr"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/fajr"
+            app:layout_constraintStart_toEndOf="@+id/rightBarrier"
             app:layout_constraintTop_toTopOf="@+id/fajr"
             app:materialIcon="pencil"
             app:materialIconColor="@color/foregroundSecondary"
@@ -282,13 +280,12 @@
             android:id="@+id/sunEdit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
+            android:padding="8dp"
             app:layout_constraintBottom_toBottomOf="@+id/sun"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/sun"
+            app:layout_constraintStart_toEndOf="@+id/rightBarrier"
             app:layout_constraintTop_toTopOf="@+id/sun"
             app:materialIcon="pencil"
             app:materialIconColor="@color/foregroundSecondary"
@@ -298,14 +295,12 @@
             android:id="@+id/dhuhrEdit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
+            android:padding="8dp"
             app:layout_constraintBottom_toBottomOf="@+id/dhuhr"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/dhuhr"
+            app:layout_constraintStart_toEndOf="@+id/rightBarrier"
             app:layout_constraintTop_toTopOf="@+id/dhuhr"
             app:materialIcon="pencil"
             app:materialIconColor="@color/foregroundSecondary"
@@ -315,14 +310,12 @@
             android:id="@+id/asrEdit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
+            android:padding="8dp"
             app:layout_constraintBottom_toBottomOf="@+id/asr"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/asr"
+            app:layout_constraintStart_toEndOf="@+id/rightBarrier"
             app:layout_constraintTop_toTopOf="@+id/asr"
             app:materialIcon="pencil"
             app:materialIconColor="@color/foregroundSecondary"
@@ -332,14 +325,12 @@
             android:id="@+id/maghribEdit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
+            android:padding="8dp"
             app:layout_constraintBottom_toBottomOf="@+id/maghrib"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/maghrib"
+            app:layout_constraintStart_toEndOf="@+id/rightBarrier"
             app:layout_constraintTop_toTopOf="@+id/maghrib"
             app:materialIcon="pencil"
             app:materialIconColor="@color/foregroundSecondary"
@@ -349,14 +340,12 @@
             android:id="@+id/ishaaEdit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
+            android:padding="8dp"
             app:layout_constraintBottom_toBottomOf="@+id/ishaa"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/ishaa"
+            app:layout_constraintStart_toEndOf="@+id/rightBarrier"
             app:layout_constraintTop_toTopOf="@+id/ishaa"
             app:materialIcon="pencil"
             app:materialIconColor="@color/foregroundSecondary"
@@ -375,6 +364,22 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ishaaText" />
+
+        <androidx.constraintlayout.widget.Barrier
+            android:id="@+id/leftBarrier"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:barrierDirection="start"
+            app:constraint_referenced_ids="sun,dhuhr,asr,fajr,ishaa,maghrib"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:layout_editor_absoluteY="8dp" />
+
+        <androidx.constraintlayout.widget.Barrier
+            android:id="@+id/rightBarrier"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:barrierDirection="end"
+            app:constraint_referenced_ids="sun,dhuhr,asr,fajr,ishaa,maghrib" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
