--- a/features/times/src/main/res/layout/vakit_notprefs_item.xml
+++ b/features/times/src/main/res/layout/vakit_notprefs_item.xml
@@ -29,8 +29,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginTop="16dp"
             android:text="@string/date"
             android:textColor="@color/foreground"
@@ -269,8 +269,8 @@
             android:id="@+id/timesTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginTop="32dp"
             android:text="@string/time"
             android:textColor="@color/foreground"
@@ -469,11 +469,11 @@
             style="@style/Widget.AppCompat.SeekBar.Discrete"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
             android:max="72"
             android:progress="36"
             app:layout_constraintEnd_toEndOf="parent"
@@ -485,11 +485,11 @@
             android:id="@+id/timeText"
             android:layout_width="wrap_content"
             android:layout_height="21dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
             android:gravity="center"
             android:text="Tam Vaktinde"
             app:layout_constraintEnd_toEndOf="parent"
@@ -502,8 +502,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginTop="32dp"
             android:text="Audio"
             android:textStyle="bold"
@@ -514,10 +514,10 @@
             android:id="@+id/audioCont"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
             android:orientation="vertical"
             android:padding="5dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -549,8 +549,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
             android:text="@string/settings"
             android:textColor="@color/foreground"
             android:textStyle="bold"
@@ -561,8 +561,8 @@
             android:id="@+id/volumeText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
             android:text="@string/volume"
             app:layout_constraintBottom_toBottomOf="@+id/volumeSpinner"
             app:layout_constraintStart_toStartOf="parent"
@@ -572,12 +572,12 @@
             android:id="@+id/volumeSpinner"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
             android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toTopOf="@+id/vibrate"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/volumeText"
@@ -597,39 +597,99 @@
             android:id="@+id/vibrate"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
             android:text="@string/vibration"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/volume" />
 
+        <TextView
+            android:id="@+id/silenterText"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/silenter"
+            app:layout_constraintBottom_toBottomOf="@+id/silenter"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/silenter" />
+
+        <net.steamcrafted.materialiconlib.MaterialIconView
+            android:id="@+id/silenterDecr"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/silenterText"
+            app:layout_constraintStart_toEndOf="@id/silenterText"
+            app:layout_constraintTop_toTopOf="@+id/silenterText"
+            app:materialIcon="chevron_down"
+            app:materialIconColor="@color/foregroundSecondary"
+            app:materialIconSize="24dp" />
+
+        <EditText
+            android:id="@+id/silenter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:inputType="number"
+            app:layout_constraintStart_toEndOf="@id/silenterDecr"
+            app:layout_constraintTop_toBottomOf="@+id/vibrate" />
+
+        <net.steamcrafted.materialiconlib.MaterialIconView
+            android:id="@+id/silenterIncr"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/silenterText"
+            app:layout_constraintStart_toEndOf="@id/silenter"
+            app:layout_constraintTop_toTopOf="@+id/silenterText"
+            app:materialIcon="chevron_up"
+            app:materialIconColor="@color/foregroundSecondary"
+            app:materialIconSize="24dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:text="@string/minutes"
+            app:layout_constraintBottom_toBottomOf="@+id/silenterText"
+            app:layout_constraintStart_toEndOf="@+id/silenterIncr"
+            app:layout_constraintTop_toTopOf="@+id/silenterText" />
+
         <Switch
             android:id="@+id/deleteAfterSound"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
             android:text="@string/autoremove_notification"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/vibrate" />
+            app:layout_constraintTop_toBottomOf="@+id/silenter" />
+
 
         <Button
             android:id="@+id/delete"
             style="@style/Widget.AppCompat.Button.Borderless"
-            android:backgroundTint="@color/alert"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:backgroundTint="@color/alert"
             android:text="@string/delete"
             app:layout_constraintTop_toBottomOf="@+id/deleteAfterSound" />
 
