--- a/features/times/src/main/res/values/attrs.xml
+++ b/features/times/src/main/res/values/attrs.xml
@@ -15,14 +15,8 @@
   -->
 
 <resources>
-    <declare-styleable name="NumberPickerPreference">
-        <attr name="minValue" format="integer" />
-        <attr name="maxValue" format="integer" />
-    </declare-styleable>
-
-
     <declare-styleable name="MultipleOrientationSlidingDrawer">
-        <attr name="orientation">
+        <attr name="_orientation">
             <enum name="top" value="0" />
             <enum name="start" value="1" />
             <enum name="bottom" value="2" />
