some bug fixes and minor changes

--- a/features/names/src/main/res/values-de/names.xml
+++ b/features/names/src/main/res/values-de/names.xml
@@ -96,7 +96,7 @@
         <item>Al-Waali</item>
         <item>Al-Muta\'aali</item>
         <item>Al-Barr</item>
-        <item>Al-Tawwab</item>
+        <item>At-Tawwab</item>
         <item>Al-Muntaqim</item>
         <item>Al-Afwu</item>
         <item>Ar-Ra\'uf</item>
