--- a/features/names/src/main/res/values-tr/names.xml
+++ b/features/names/src/main/res/values-tr/names.xml
@@ -96,7 +96,7 @@
         <item>El-Vâlî</item>
         <item>El-Müteâli</item>
         <item>El-Berr</item>
-        <item>El-Tevvâb</item>
+        <item>Et-Tevvâb</item>
         <item>El-Müntakim</item>
         <item>El-Afüv</item>
         <item>Er-Ra\'ûf</item>
