--- a/features/compass/src/main/res/layout/calibration_dialog.xml
+++ b/features/compass/src/main/res/layout/calibration_dialog.xml
@@ -38,7 +38,8 @@
             android:text="@string/compassCalibrationTitle"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/subtitle"
