--- a/features/hadith/src/main/res/layout/number_dialog.xml
+++ b/features/hadith/src/main/res/layout/number_dialog.xml
@@ -29,10 +29,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:clickable="false"
-            android:editable="false"
             android:ems="10"
             android:enabled="false"
-            android:inputType="number"
+            android:inputType="none"
             android:textColor="@color/foreground" />
 
         <TextView
