--- a/features/intro/src/main/res/layout/intro_menu.xml
+++ b/features/intro/src/main/res/layout/intro_menu.xml
@@ -43,7 +43,7 @@
             android:layout_height="match_parent">
 
 
-            <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
