--- a/features/intro/src/main/res/layout/intro_pager.xml
+++ b/features/intro/src/main/res/layout/intro_pager.xml
@@ -31,7 +31,7 @@
         android:textColor="@color/background"/>
 
 
-    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/background"
